--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
         .content h2 {
             color: #004aad;
         }
+        .cta-button {
+            background-color: #004aad;
+            color: #fff;
+            padding: 15px 30px;
+            text-decoration: none;
+            border-radius: 5px;
+            display: inline-block;
+            margin-top: 20px;
+            font-size: 18px;
+        }
         footer {
             background-color: #004aad;
             color: #fff;
@@ -62,22 +72,8 @@
             bottom: 0;
             width: 100%;
         }
-        .cta-button {
-            background-color: #004aad;
-            color: #fff;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            display: inline-block;
-            margin-top: 20px;
-        }
     </style>
-
-    
-    <!-- Substitua pelo seu código de verificação de domínio -->
     <meta name="facebook-domain-verification" content="your-verification-code" />
-
-    
 </head>
 <body>
     <header>
@@ -115,7 +111,6 @@
         t.src=v;s=b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t,s)}(window, document,'script',
         'https://connect.facebook.net/en_US/fbevents.js');
-        // Substitua 'YOUR_PIXEL_ID' pelo seu ID do Pixel
         fbq('init', '1015480863314591'); 
         fbq('track', 'PageView');
     </script>
