--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             background-color: #004aad;
             color: #fff;
             padding: 15px 30px;
+            margin-bottom: 100px;
             text-decoration: none;
             border-radius: 5px;
             display: inline-block;
